SalesforceData/src/objects/EMPLOYEE__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY() -  Date_Of_Birth__c )/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CTC__c</fullName>
        <label>Annual CTC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gandhi Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Employee__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Current Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DEPARTMENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPARTMENT</label>
        <referenceTo>DEPARTMENT__c</referenceTo>
        <relationshipLabel>EMPLOYEE</relationshipLabel>
        <relationshipName>EMPLOYEE_DEPARTMENT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Joining__c</fullName>
        <label>Date Of Joining</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Project  Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr. Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>BE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Tech.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Sc.</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Last_Name__c  &amp; &quot;,&quot;  &amp;  First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_On_Notice_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is On Notice Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Working_Day__c</fullName>
        <formula>Resignation_Date__c  + 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Working Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EMPLOYEE__c.Designation__c</field>
                <operation>equals</operation>
                <value>Project  Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EMPLOYEE__c</referenceTo>
        <relationshipLabel>EMPLOYEE&amp;MANAGER</relationshipLabel>
        <relationshipName>EMPLOYEE_MANAGER</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resignation_Date__c</fullName>
        <label>Resignation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salary_Credited_Till_Date__c</fullName>
        <label>Salary Credited Till Date</label>
        <summarizedField>Salary__c.Gross_Salary__c</summarizedField>
        <summaryForeignKey>Salary__c.EMPLOYEE_CreditedTo__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dot Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AP</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF (  Is_Active__c ==True  , IMAGE(&quot;/servlet/servlet.FileDownload?file=015280000022ItX&quot;, &quot;Green&quot;),
       IF ( Is_Active__c == False, IMAGE( &quot;/servlet/servlet.FileDownload?file=015280000022Itr&quot;, &quot;Red&quot;),
      IF( Is_On_Notice_Period__c ==True  &amp;&amp; Is_Active__c ==True ,  IMAGE(&quot;/servlet/servlet.FileDownload?file=015280000022Itw&quot; , &quot;Yellow&quot;),null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <label>Teacher</label>
        <picklist>
            <picklistValues>
                <fullName>Jigar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaveeta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twinkle</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>EMPLOYEE</label>
    <listViews>
        <fullName>Active_Employees</fullName>
        <columns>Date_Of_Joining__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Last_Working_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Employees</label>
    </listViews>
    <listViews>
        <fullName>All_employees_on_notice_period</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Address__c</columns>
        <columns>Age__c</columns>
        <columns>City__c</columns>
        <columns>Date_Of_Birth__c</columns>
        <columns>Date_Of_Joining__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_On_Notice_Period__c</columns>
        <columns>Last_Working_Day__c</columns>
        <columns>Manager__c</columns>
        <columns>Resignation_Date__c</columns>
        <columns>Skill__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_On_Notice_Period__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All employees on notice period</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_Active</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_Of_Joining__c</columns>
        <columns>Last_Working_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>In Active</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mumbai_Sales_EMPLOYEE</fullName>
        <filterScope>Queue</filterScope>
        <label>Mumbai Sales</label>
        <queue>Mumbai_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>On_notice_period</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_Of_Joining__c</columns>
        <columns>Last_Working_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_On_Notice_Period__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>On notice period</label>
    </listViews>
    <listViews>
        <fullName>Queue_Lead_EMPLOYEE</fullName>
        <filterScope>Queue</filterScope>
        <label>Pune Sales</label>
        <queue>Pune_Sales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>EMPLOYEE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EMPLOYEE</pluralLabel>
    <recordTypes>
        <fullName>Non_Technical</fullName>
        <active>true</active>
        <label>Non-Technical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <label>Technical</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Age</fullName>
        <active>true</active>
        <description>Age is between 21-30</description>
        <errorConditionFormula>Year( TODAY() ) - Year( Date_Of_Birth__c  ) &lt; 21 || Year( TODAY() ) - Year( Date_Of_Birth__c ) &gt; 30</errorConditionFormula>
        <errorMessage>Age is not between  21-30</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Notice_Peroid_True_Enter_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Is_On_Notice_Period__c == TRUE &amp;&amp;  ISNULL(Resignation_Date__c),true,false)</errorConditionFormula>
        <errorDisplayField>Resignation_Date__c</errorDisplayField>
        <errorMessage>Not on Notice Period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_working_date_cannot_be_greater_than</fullName>
        <active>true</active>
        <errorConditionFormula>Last_Working_Day__c &lt;=  Date_Of_Birth__c</errorConditionFormula>
        <errorDisplayField>Date_Of_Joining__c</errorDisplayField>
        <errorMessage>Last working date cannot be greater than joining date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>above_18_years</fullName>
        <active>true</active>
        <errorConditionFormula>Age__c &lt; 18</errorConditionFormula>
        <errorDisplayField>Date_Of_Birth__c</errorDisplayField>
        <errorMessage>Please provide a valid Date of birth. Employee cannot be less than 18 years of Age</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>limit_size_to_10</fullName>
        <active>true</active>
        <description>Create a field ‘SSN’ (Number). Use a validation rule to limit size to 10. Duplicate values should not be allowed</description>
        <errorConditionFormula>SSN__c  &gt; 1000000000</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>Size is greater than 10</errorMessage>
    </validationRules>
</CustomObject>